Update API docs and order struct
